--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,14 +1,17 @@
 .header{
     width:100%;
     height:50px;
-    background-color:lightskyblue;
+    background-color:white;
     display: flex;
     align-items:center;
+    border-bottom:1px solid;
 
 }
 .header span{
     flex-grow:1;
     margin-left:10px;
+    font-size:30px;
+    font-weight: bold;
 }
 .header nav{
     margin-right:10px;
@@ -18,6 +21,8 @@
     border:0px;
     cursor: pointer;
     background-color:white;
+    font-size:30px;
+    text-transform: capitalize;
 
 }
 .header nav button:hover{
