--- a/src/Components/Recipedetails/Recipedetails.css
+++ b/src/Components/Recipedetails/Recipedetails.css
@@ -7,5 +7,20 @@
     height:auto;
     background-color:grey;
     border-left:1px solid black;
+  
 
+}
+.close{
+    position:absolute;
+    right:10px;
+    top:10px;
+    width:30px;
+    height:30px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    background-color:white;
+    box-shadow:0px 1px 2px rgba(0,0,0,.3);
+    border-radius:20px;
+    cursor:pointer;
 }
