--- a/src/Components/Recipedetails/Recipedetails.css
+++ b/src/Components/Recipedetails/Recipedetails.css
@@ -10,6 +10,16 @@
 }
 .close{
     position: absolute;
-    
+    right:10px;
+    top:10px;
+    width:30px;
+    height:30px;
+    border-radius:50%;
+    display: flex;
+    align-items:center;
+    justify-content:center;
+    background-color:white;
+    cursor: pointer;
 }
+
 
