--- a/src/Components/Recipedetails/Recipedetails.css
+++ b/src/Components/Recipedetails/Recipedetails.css
@@ -1,12 +1,6 @@
 .recipedetails{
-  position: absolute;
-  top:50px;
-  right:0px;
-  bottom:0px;
-  width:40%;
-  height:auto;
-  background-color:gray;
-  border-left:1px solid black
+  width:100%;
+  height:100%;
 }
 .close{
     position: absolute;
@@ -20,6 +14,16 @@
     justify-content:center;
     background-color:white;
     cursor: pointer;
+}
+.head{
+  display: flex;
+  
+}
+.head_image{
+  width:300px;
+  height:300px;
+  border-radius:20px;
+  align-items:center;
 }
 
 
