--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -11,6 +11,7 @@ body{
     width:400px;
     background-color:white;
     border-radius:10px;
+    padding:25px;
 
 }
 .Container h1{
@@ -45,4 +46,9 @@ form .text_field{
     font-weight:bold;
     cursor: pointer;
     outline:none;
+}
+.Container .span{
+    text-decoration:none;
+    margin-left:80px;
+    color:black;
 }
