--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -11,6 +11,7 @@ body{
     width:400px;
     background-color:white;
     border-radius:10px;
+    padding:25px;
 
 }
 .Container h1{
@@ -46,4 +47,8 @@ form .text_field{
     cursor: pointer;
     outline:none;
 
+}
+.Container p{
+     text-align:center;
+     color: red;
 }
