--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,16 +2,17 @@
     width:100%;
     height:50px;
     background-color:white;
-    display: flex;
+    display:flex;
     align-items:center;
+    justify-content: space-between;
     border-bottom:1px solid;
 
 }
-.header span{
-    flex-grow:1;
-    margin-left:10px;
-    font-size:30px;
-    font-weight: bold;
+.header .logout_button{
+   margin-right:20px;
+   border-radius: 20px;
+    padding: 10px 20px 10px 20px;
+    cursor: pointer; 
 }
 .header nav{
     margin-right:10px;
